Commit code fix performance with query in loop N+1, using hashing for search